# tree-of-life

./: .coveragerc  .ctrlp_ignore  .gitignore  .gitmodules  activities  activities.py  basic_help.rst  cocoa.py  conftest.py  design  design.md  money_types  old_reference_crap  preview-notes  pytest.ini  readme.md  relationships  searchbrainstorming.md  setup.py  startvim.py  startvim.sh  structure  sync_protocol  test  test.sh  test_annotate.sh  todo_design  tree_jumping  treeoflife_sync
Popup.app/Contents/: Info.plist
android/: .gitignore  README.md  settings.gradle
android/treeoflife/: blacklist  build.gradle  proguard-rules.txt
docs/: Makefile  conf.py  index.rst
optimizer/: .gitignore
optimizer_rust/: Cargo.toml  btreemap_genome  lahwran_cargo_bench  tree
optimizer_rust/src/: core.rs  crossover.rs  fitness.rs  genome.rs  main.rs  mutate.rs  parse_tree.rs  selection.rs  tuneables.rs
optimizer_rust/src/model/: genome.rs  log.rs  mod.rs  parse_tree.rs
todo_tracker/: __init__.py  activity.py  alarms.py  autosaving.py  exceptions.py  file_storage.py  navigation.py  nodes.py  ordereddict.py  parseutil.py  searching.py  time.py  timefmt.py  tracker.py  userinterface.py  util.py
treeoflife/: __init__.py  alarms.py  conftest.py  editor_launch.py  file_storage.py  interact_searching.py  main.py  navigation.py  ordereddict.py  parseutil.py  protocols.py  scheduler.py  searching.py  syncdata.py  timefmt.py  tracker.py  userinterface.py  util.py
ui/: browser_compat.js  browser_compat_old.js  console.js  node-default.html  ui.html  ui.js  ui.less  ui_old.less
(+126 files in other folders)
