[package]

name = "treeoflife_optimizer"
version = "0.0.1"
authors = ["Chris Horne <lahwran@lahwran.net>",
            "Melanie Heisey <mheisey.nox@gmail.com"]

[dependencies]
chrono = "0.2.4"
rand = "0.1.3"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
