[package]

name = "treeoflife_optimizer"
version = "0.0.1"
authors = ["Chris Horne <lahwran@lahwran.net>",
            "Melanie Heisey <mheisey.nox@gmail.com"]

[dependencies]
chrono = "0.2.10"
rand = "0.3.7"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
