[package]

name = "treeoflife_optimizer"
version = "0.0.1"
authors = ["Chris Horne <lahwran@lahwran.net>",
            "Melanie Heisey <mheisey.nox@gmail.com"]

[dependencies]
chrono = "0.2.14"
rand = "0.3.8"
argparse = "0.2.0"
rustc-serialize = "0.3"

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
